--- a/GameOfLifeKata.Tests/GameOfLifeKata.Tests.csproj
+++ b/GameOfLifeKata.Tests/GameOfLifeKata.Tests.csproj
@@ -50,6 +50,15 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GameOfLifeKata\GameOfLifeKata.csproj">
+      <Project>{8648474d-4f68-4d7d-a342-569334736e74}</Project>
+      <Name>GameOfLifeKata</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
