Implement ConsoleGameOutput and use from within the console.

--- a/GameOfLifeKata/GameOfLifeKata.csproj
+++ b/GameOfLifeKata/GameOfLifeKata.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleGameOutput.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="GameUtils.cs" />
     <Compile Include="IGameGridGenerator.cs" />
